--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <img src="./img/sneakers.png" alt="">
+                <img src="/img/sneakers.png" alt="">
             </div>
             <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
+                    <img src="/img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
@@ -40,7 +40,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="./img/air.png" alt="" class="sliderImg">
+                <img src="/img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹12,450</h2>
