--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <img src="/img/sneakers.png" alt="">
+                <img src="Img/sneakers.png" alt="">
             </div>
             <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="/img/search.png" width="20" height="20" alt="" class="searchIcon">
+                    <img src="Img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
@@ -40,7 +40,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="/img/air.png" alt="" class="sliderImg">
+                <img src="Img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹12,450</h2>
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/jordan.png" alt="" class="sliderImg">
+                <img src="Img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR JORDAN</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹11,920</h2>
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/blazer.png" alt="" class="sliderImg">
+                <img src="Img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹8,720</h2>
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/crater.png" alt="" class="sliderImg">
+                <img src="Img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">CRATER</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹10,320</h2>
@@ -76,7 +76,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/hippie.png" alt="" class="sliderImg">
+                <img src="Img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">₹7,650</h2>
@@ -89,29 +89,29 @@
 
     <div class="features">
         <div class="feature">
-            <img src="./img/shipping.png" alt="" class="featureIcon">
+            <img src="Img/shipping.png" alt="" class="featureIcon">
             <span class="featureTitle">FREE SHIPPING</span>
             <span class="featureDesc">Free worldwide shipping on all orders.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/return.png" alt="">
+            <img class="featureIcon" src="Img/return.png" alt="">
             <span class="featureTitle">30 DAYS RETURN</span>
             <span class="featureDesc">No question return and easy refund in 14 days.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/gift.png" alt="">
+            <img class="featureIcon" src="Img/gift.png" alt="">
             <span class="featureTitle">GIFT CARDS</span>
             <span class="featureDesc">Buy gift cards and use coupon codes easily.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/contact.png" alt="">
+            <img class="featureIcon" src="Img/contact.png" alt="">
             <span class="featureTitle">CONTACT US!</span>
             <span class="featureDesc">Keep in touch via email and support system.</span>
         </div>
     </div>
 
     <div class="product" id="product">
-        <img src="./img/air.png" alt="" class="productImg">
+        <img src="Img/air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
             <h2 class="productPrice">₹12450</h2>
@@ -142,8 +142,8 @@
             <input type="text" placeholder="Elton St 21 22-145" class="payInput">
             <h1 class="payTitle">Card Information</h1>
             <div class="cardIcons">
-                <img src="./img/visa.png" width="40" alt="" class="cardIcon">
-                <img src="./img/master.png" alt="" width="40" class="cardIcon">
+                <img src="Img/visa.png" width="40" alt="" class="cardIcon">
+                <img src="Img/master.png" alt="" width="40" class="cardIcon">
             </div>
             <input type="password" class="payInput" placeholder="Card Number">
             <div class="cardInfo">
