--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
             <div class="footerRightMenu">
                 <h1 class="fMenuTitle">Follow Us</h1>
                 <div class="fIcons">
-                    <img src="./img/facebook.png" alt="" class="fIcon">
-                    <img src="./img/twitter.png" alt="" class="fIcon">
-                    <img src="./img/instagram.png" alt="" class="fIcon">
-                    <img src="./img/whatsapp.png" alt="" class="fIcon">
+                    <img src="Img/facebook.png" alt="" class="fIcon">
+                    <img src="Img/twitter.png" alt="" class="fIcon">
+                    <img src="Img/instagram.png" alt="" class="fIcon">
+                    <img src="Img/whatsapp.png" alt="" class="fIcon">
                 </div>
             </div>
             <div class="footerRightMenu">
